# HUB75E_ICE40

./: README.md
Gateware/: Makefile  signals.gtkw
Gateware/src/Ice40/: pins.pcf
Gateware/src/main/scala/mylib/: MyTopLevel.scala  MyTopLevelSim.scala  UartToWishbone.scala  WishboneToRgbMatrix.scala
Gateware/src/verilog/: inthsclk.v  single_port_ram.v
Hardware/: ICE40Module-rescue.lib  ICE40Module.kicad_pcb  ICE40Module.net  ICE40Module.pro  ICE40Module.sch  sym-lib-table
Software/PC_To_FPGA/: Cargo.toml
Software/PC_To_FPGA/src/: main.rs
