[package]
name = "RGBControl"
version = "0.1.0"
authors = ["riktw <rik@justanotherelectronicsblog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
bmp = "*"
ftdi-embedded-hal = { git = "https://github.com/geomatsi/ftdi-embedded-hal" }
gif = "0.10.3"
ctrlc = "3.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
